# SLATEC

./: CMakeLists.txt  DISCLAIMER  INSTALL  MD5  README  _src-list  azure-pipelines.yml  bitbucket-pipelines.yml  docinstall  ford-doc.md  index  index.html  list  sladoc.f  sladoc.f90  slprep.f  slprep.f90  spfun.f  spfun.f90  spfunchk.f  spfunchk.f90  subsid.f  subsid.f90
chk/: CMakeLists.txt  avntst.f  avntst.f90  bikck.f  bikck.f90  bjyck.f  bjyck.f90  blachk.f  blachk.f90  bspck.f  bspck.f90  cbeg.f  cbeg.f90  cblat2.f  cblat2.f90  cblat3.f  cblat3.f90  cchk12.f  cchk12.f90  cchk13.f  cchk13.f90  cchk22.f  cchk22.f90  cchk23.f  cchk23.f90  cchk32.f  cchk32.f90  cchk33.f  cchk33.f90  cchk42.f  cchk42.f90  cchk43.f  cchk43.f90  cchk52.f  cchk52.f90  cchk53.f  cchk53.f90  cchk62.f  cchk62.f90  cchke2.f  (+760 more)
src/: CMakeLists.txt  MD5  aaaaaa.f90  asyik.f90  asyjy.f90  avint.f90  bcrh.f90  bdiff.f90  besi.f90  besj.f90  besk.f90  besknu.f90  besy.f90  besynu.f90  bfqad.f90  bint4.f90  bintk.f90  bkias.f90  bkisr.f90  bksol.f90  blktr1.f90  bndacc.f90  bndsol.f90  bnfac.f90  bnslv.f90  bsgq8.f90  bskin.f90  bspdoc.f90  bspdr.f90  bspev.f90  bsplvd.f90  bsplvn.f90  bsppp.f90  bspvd.f90  bspvn.f90  bsqad.f90  bsrh.f90  bvalu.f90  bvder.f90  bvpor.f90  (+712 more)
src/approximation/: CMakeLists.txt  approximation.f90  bsplvd.f90  bsplvn.f90  cv.f90  dbocls.f90  dbols.f90  dbolsm.f90  dcv.f90  defc.f90  defcmn.f90  dfc.f90  dfcmn.f90  dfspvd.f90  dfspvn.f90  dlpdp.f90  dlsei.f90  dlsi.f90  dmout.f90  dp1vlu.f90  dpcoef.f90  dpolft.f90  dwnlit.f90  dwnlsm.f90  dwnlt1.f90  dwnlt2.f90  dwnlt3.f90  dwnnls.f90  efc.f90  efcmn.f90  fc.f90  fcmn.f90  lpdp.f90  lsei.f90  lsi.f90  pcoef.f90  polfit.f90  pvalue.f90  sbocls.f90  sbols.f90  (+8 more)
src/arrays/: CMakeLists.txt  c1merg.f90  d1merg.f90  dpperm.f90  dpsort.f90  dsort.f90  hpperm.f90  hpsort.f90  i1merg.f90  ipperm.f90  ipsort.f90  isort.f90  s1merg.f90  spperm.f90  spsort.f90  ssort.f90
src/blas/: CMakeLists.txt  caxpy.f90  ccopy.f90  cdcdot.f90  cdotc.f90  cdotu.f90  cgbmv.f90  cgemm.f90  cgemv.f90  cgerc.f90  cgeru.f90  chbmv.f90  chemm.f90  chemv.f90  cher.f90  cher2.f90  cher2k.f90  cherk.f90  chpmv.f90  chpr.f90  chpr2.f90  crotg.f90  cscal.f90  csign.f90  csrot.f90  csscal.f90  cswap.f90  csymm.f90  csyr2k.f90  csyrk.f90  ctbmv.f90  ctbsv.f90  ctpmv.f90  ctpsv.f90  ctrmm.f90  ctrmv.f90  ctrsm.f90  ctrsv.f90  dasum.f90  daxpy.f90  (+78 more)
src/bspline/: bfqad.f90  bint4.f90  bintk.f90  bnfac.f90  bnslv.f90  bsgq8.f90  bspdoc.f90  bspdr.f90  bspev.f90  bsppp.f90  bspvd.f90  bspvn.f90  bsqad.f90  bvalu.f90  dbfqad.f90  dbint4.f90  dbintk.f90  dbnfac.f90  dbnslv.f90  dbsgq8.f90  dbspdr.f90  dbspev.f90  dbsppp.f90  dbspvd.f90  dbspvn.f90  dbsqad.f90  dbvalu.f90  dintrv.f90  dppgq8.f90  dppqad.f90  dppval.f90  intrv.f90  ppgq8.f90  ppqad.f90  ppval.f90
src/bvsup/: CMakeLists.txt  bksol.f90  bvder.f90  bvpor.f90  bvsup.f90  cscale.f90  dbksol.f90  dbvder.f90  dbvpor.f90  dbvsup.f90  dcoef.f90  dcscal.f90  dexbvp.f90  dfmat.f90  dgvec.f90  dlssud.f90  dmacon.f90  dmgsbv.f90  dml.f90  dohtrl.f90  dorthr.f90  dprvec.f90  dreort.f90  drkfab.f90  dstor1.f90  dstway.f90  dsuds.f90  duivp.f90  duvec.f90  dvecs.f90  exbvp.f90  fmat.f90  gvec.f90  lssods.f90  lssuds.f90  macon.f90  mgsbv.f90  ml.f90  ohtrol.f90  ohtror.f90  (+13 more)
src/dassl/: CMakeLists.txt  ddaini.f90  ddajac.f90  ddanrm.f90  ddaslv.f90  ddassl.f90  ddastp.f90  ddatrp.f90  ddawts.f90  sdaini.f90  sdajac.f90  sdanrm.f90  sdaslv.f90  sdassl.f90  sdastp.f90  sdatrp.f90  sdawts.f90
src/data_handling/: CMakeLists.txt  c1merg.f90  d1merg.f90  data_handling.f90  dpperm.f90  dpsort.f90  dsort.f90  hpperm.f90  hpsort.f90  i1merg.f90  ipperm.f90  ipsort.f90  isort.f90  s1merg.f90  spperm.f90  spsort.f90  ssort.f90
src/depac/: CMakeLists.txt  cfod.f90  dcfod.f90  ddeabm.f90  ddebdf.f90  dderkf.f90  ddes.f90  deabm.f90  debdd1.f90  debdf.f90  defehl.f90  derkf.f90  derkfs.f90  des.f90  dfehl.f90  dhstrt.f90  dhvnrm.f90  dintp.f90  dintyd.f90  dlsod.f90  dpjac.f90  drkfs.f90  drsco.f90  dslvs.f90  dsteps.f90  dstod.f90  dsvco.f90  dvnrms.f90  hstart.f90  hvnrm.f90  intyd.f90  lsod.f90  pjac.f90  rsco.f90  sintrp.f90  slvs.f90  steps.f90  stod.f90  svco.f90  vnwrms.f90
src/diff_integ/: CMakeLists.txt  avint.f90  davint.f90  dgaus8.f90  diff_integ.f90  dpfqad.f90  dppgq8.f90  dqnc79.f90  gaus8.f90  pfqad.f90  ppgq8.f90  qnc79.f90
src/diff_integ_eq/: CMakeLists.txt  diff_integ_eq.f90
src/dqdot/: CMakeLists.txt  dqdota.f90  dqdoti.f90  mpadd.f90  mpadd2.f90  mpadd3.f90  mpblas.f90  mpcdm.f90  mpchk.f90  mpcmd.f90  mpdivi.f90  mperr.f90  mpmaxr.f90  mpmlp.f90  mpmul.f90  mpmul2.f90  mpmuli.f90  mpnzr.f90  mpovfl.f90  mpstr.f90  mpunfl.f90
src/eispack/: CMakeLists.txt  bakvec.f90  balanc.f90  balbak.f90  bandr.f90  bandv.f90  bisect.f90  bqr.f90  cbabk2.f90  cbal.f90  cdiv.f90  cg.f90  ch.f90  cinvit.f90  combak.f90  comhes.f90  comlr.f90  comlr2.f90  comqr.f90  comqr2.f90  cortb.f90  corth.f90  csroot.f90  eisdoc.f90  elmbak.f90  elmhes.f90  eltran.f90  figi.f90  figi2.f90  hqr.f90  hqr2.f90  htrib3.f90  htribk.f90  htrid3.f90  htridi.f90  imtql1.f90  imtql2.f90  imtqlv.f90  invit.f90  minfit.f90  (+35 more)
src/ext_exp/: CMakeLists.txt  dxadd.f90  dxadj.f90  dxpsi.f90  dxqmu.f90  dxqnu.f90  dxred.f90  dxset.f90  xnrmp.f90  xpmu.f90  xpnrm.f90  xqmu.f90  xqnu.f90  xred.f90
src/fftpack/: CMakeLists.txt  cfftb.f90  cfftb1.f90  cfftf.f90  cfftf1.f90  cffti.f90  cffti1.f90  cosqb.f90  cosqb1.f90  cosqf.f90  cosqf1.f90  cosqi.f90  cost.f90  costi.f90  ezfft1.f90  ezfftb.f90  ezfftf.f90  ezffti.f90  fftdoc.f90  passb.f90  passb2.f90  passb3.f90  passb4.f90  (+27 more)
test/: CMakeLists.txt  MD5  chkxer.f90  common.f90  comp.f90  get_argument.f90  ismpl.f90  pass.f90  test01.f90  test02.f90  test03.f90  test04.f90  test05.f90  test06.f90  test07.f90  test08.f90  test09.f90  test10.f90  test11.f90  test12.f90  test13.f90  test14.f90  test15.f90  test16.f90  test17.f90  test18.f90  test19.f90  test20.f90  test21.f90  test22.f90  test23.f90  test24.f90  test25.f90  test26.f90  test27.f90  test28.f90  test29.f90  test30.f90  test31.f90  test32.f90  (+126 more)
(+3229 files in other folders)
