
file(GLOB_RECURSE srcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} CONFIGURE_DEPENDS ./*.f90 )

set( CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules )

add_library(slatec SHARED ${srcs} )

install(TARGETS slatec LIBRARY DESTINATION lib RUNTIME DESTINATION bin)
install(DIRECTORY ${CMAKE_BINARY_DIR}/modules DESTINATION include PATTERN "*_genmod*" EXCLUDE )